-did troubleshoot of layout issues

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -392,6 +392,7 @@ a {
   font-weight: 500;
   color: var(--color-body-dark);
   line-height: 1.3;
+  margin: 12%;
 }
 .quote__text::before {
   content: open-quote;
@@ -706,7 +707,7 @@ a {
   gap: 8rem 4rem;
 }
 .block-plans .card {
-  max-width: 500px;
+  max-width: 400px;
   margin: 0 auto;
 }
 
@@ -721,6 +722,7 @@ a {
 }
 .feature__heading {
   margin: 1rem 0;
+  font-weight: 600;
 }
 .feature__content {
   margin: 0 2rem;
